# Kilobot-Group-Size

./: .cproject  .project
src/: CMakeLists.txt  test.txt
src/aggregation/behaviors/: CMakeLists.txt  aggregation.c  beacon_blue.c  beacon_red.c  explorer.c  main.c
src/aggregation/controllers/kilobot_aggregation/: kilobot_aggregation.cpp  kilobot_aggregation.h
src/aggregation/experiments/: exp_aggregation.argos  kilobot_aggregation (another copy).argos  kilobot_aggregation (copy).argos  kilobot_aggregation.argos  kilobot_aggregation100swarm.argos  kilobot_aggregation50swarm.argos
src/aggregation/loop_functions/: CMakeLists.txt
src/aggregation/loop_functions/aggregation_loop_functions/: aggregation.cpp  aggregation.h
src/aggregation/loop_functions/word_loop_functions/: word_qtuser_functions.cpp
src/examples/behaviors/: CMakeLists.txt
src/examples/experiments/: kilobot_debug.argos
src/examples/loop_functions/: CMakeLists.txt
src/plugins/robots/kilobot/control_interface/: kilolib.c  kilolib.h
